--- a/index.Rmd
+++ b/index.Rmd
@@ -375,7 +375,8 @@ class: center, middle
 
 ### 8. Des données publiées .red[sous une licence ouverte]
 
-> **Idéalement dans le domaine public sinon dans une licence conforme à l'[Open Definition](www.opendefinition.org) : Licence Ouverte (CC-BY) ou ODBL (CC-BY-SA)** 
+> **Idéalement dans le domaine public sinon dans une licence conforme à l'[Open Definition](www.opendefinition.org). Par décret, deux licences sont homologuées en France : Licence Ouverte (CC-BY) ou ODBL (CC-BY-SA)** 
+ 
 
 ---
 class: inverse, center, middle
